@@ -273,11 +273,12 @@ name|IvyListener
 name|listener
 parameter_list|)
 block|{
-return|return
-name|Arrays
+name|IvyListener
+index|[]
+name|listeners
+init|=
+name|this
 operator|.
-name|asList
-argument_list|(
 name|listeners
 operator|.
 name|getListeners
@@ -286,12 +287,48 @@ name|IvyListener
 operator|.
 name|class
 argument_list|)
-argument_list|)
-operator|.
-name|contains
-argument_list|(
+decl_stmt|;
+for|for
+control|(
+name|IvyListener
+name|listen
+range|:
+name|listeners
+control|)
+block|{
+if|if
+condition|(
+name|listen
+operator|instanceof
+name|FilteredIvyListener
+condition|)
+block|{
+if|if
+condition|(
 name|listener
+operator|.
+name|equals
+argument_list|(
+operator|(
+operator|(
+name|FilteredIvyListener
+operator|)
+name|listen
+operator|)
+operator|.
+name|getIvyListener
+argument_list|()
 argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+block|}
+block|}
+return|return
+literal|false
 return|;
 block|}
 specifier|public
